# shredlink-rust-example

./: Cargo.toml  readme.md
src/: main.rs
