[package]
name = "shredlink-rust-example"
version = "0.1.0"
edition = "2021"

[dependencies]
shredlink-proto = "0.1.1"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
anyhow = "1.0"
tokio-stream = "0.1"
prost = "0.12"
bincode = "1.3.3"
futures = "0.3.24"
solana-entry = "=2.2.1"
bs58 = "0.5"
